Fix comment textarea width on mobile

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -22,10 +22,6 @@ p.lead {
 @media(max-width: 590px){
     .intro{
         padding-top: 0px !important;
-
-        textarea{
-            width: auto !important;
-        }
     }
 }
 
